--- a/phenology-frontend/src/app/app.component.html
+++ b/phenology-frontend/src/app/app.component.html
@@ -1,4 +1,6 @@
 
+<app-navigation></app-navigation>
+
 <div class="container">
   <div class="row">
     <div class="col-12 col-md-10 offset-md-1">
@@ -7,3 +9,4 @@
   </div>
 </div>
 
+<app-footer></app-footer>
