--- a/phenology-frontend/src/app/page/history/history.component.html
+++ b/phenology-frontend/src/app/page/history/history.component.html
@@ -30,6 +30,7 @@
     közepétől a mezőgazdasági termesztés föllendítése, a termés- és a vegyszeres
     növényvédelem-optimalizálás, a XXI. században pedig egyre inkább az
     éghajlatváltozás nyomon követése lett a fő cél.
+    gikjgkj
   </p>
 </div>
 
