--- a/phenology-frontend/src/app/page/guide/guide.component.html
+++ b/phenology-frontend/src/app/page/guide/guide.component.html
@@ -1,1 +1,85 @@
 <h1>Útmutató növényfenológiai megfigyelésekre</h1>
+
+<h5>A fenológiai megfigyelések jelentősége</h5>
+
+<p>
+  A növényfenológia a növények környezeti viszonyoktól függő, szabályszerű
+  egymásutánban bekövetkező jelenségeinek (rügyfakadás, virágzás, stb.)
+  vizsgálatával foglalkozó tudomány. A vadnövények és a táplálékunkként szolgáló
+  kultúrnövényeink fejlődési fázisait az időjárás döntő mértékben befolyásolja.
+  Mivel az időjárás évről-évre másként alakul, a növények is évről-évre más
+  időpontban érik el az egyes fejlettségi állapotaikat. Ezen időpontok ismerete
+  nélkülözhetetlen pl. a gazdálkodók számára. A hosszú, évtizedekre szóló
+  vadnövény fenológiai adatsorok pedig az éghajlat és az éghajlat-változás
+  szempontjából rendkívül fontosak, hiszen a növények fejlődési stádiumai az
+  éghajat változásával eltolódnak, azt nyomjelzőként mutatják.
+</p>
+
+<h5>A fenológiai megfigyelések fókusza</h5>
+
+<p>
+  Annak az időpontnak a pontos meghatározása, amikor egy növény új fenológiai
+  fázisba lép.
+</p>
+
+<h5>Mennyi növényt kell, megfigyeljek?</h5>
+
+<p>
+  Az útmutatóban szereplő növények listája azokat a fajtákat tartalmazza,
+  melyeket érdemesnek tartunk a megfigyelésre. Ha valaki ezek közül mindet, az
+  összes fázissal meg tudja figyelni, az szenzációs. Ha valaki csak egy
+  növényfaj egy fejlődési fázisának kezdetét tudja megfigyelni, az is nagyon jó.
+  Rajtunk múlik: amennyire lehetőségünk van, amennyit időnk, energiánk enged. Ha
+  valaki a felsoroltakon kívül más növényt figyel meg, azt is örömmel fogadjuk,
+  és lehet a listában nem szereplő, de megfigyelésre érdemesnek tartott
+  növényeket is javasolni.
+</p>
+
+<h5>A megfigyelések elvégzésének folyamata</h5>
+
+<p>
+  A megfigyelendő információk köre a lehető legjobban le van egyszerűsítve. Arra
+  azonban figyeljünk, hogy csak olyan információkat adjunk meg, melyeket a saját
+  szemünkkel figyeltünk meg, mások szóbeli tájékoztatása alapján ne készítsünk
+  megfigyelést.
+  <br />
+  1. A növény fajtájának pontos azonosítása Nagyon fontos, hogy a növényeket
+  pontoson beazonosítsuk, ebben segít az útmutató második felében azok
+  fényképekkel illusztrált részletes leírása.
+  <br />
+  2. Az új fenológiai fázis azonosítása Az új fenológiai fázisba lépést akkor
+  tudjuk pontosan azonosítani, ha a kiválasztott növényt napról-napra szemmel
+  tartjuk.
+  <br />
+  3. A környezet, elsősorban a domborzat (sík terület, völgy, délies, északias
+  lejtő) meghatározása. A lejtő irányultságának nagy szerepe van a fenológiai
+  fázisok időpontjában, már kis körzeten belül is egy délies (így melegebb,
+  napfényes) oldalban pl. jóval hamarabb kezdenek virágozni a növények, mint az
+  északias oldalon.
+  <br />
+  4. A helyszín és dátum meghatározása
+</p>
+
+<h5>A megfigyelések rögzítése</h5>
+
+<p>
+  A megfigyeléseket az OMSZ MET-ÉSZ rendszerében kérjük rögzíteni, melyhez egy
+  egyszeri regisztráció után kapunk jogosultságot. A MET-ÉSZ-be belépve, a Fórum
+  fül Fenológia témakörében hozzászólásként kérjük rögzíteni a következő
+  adatokat:
+  <br />
+  1. A megfigyelt növény helyszíne (település, településrész, pl:
+  Miskolc-Diósgyőr), a domborzat-lejtő iránya (sík a terület, völgyben fekszik,
+  vagy milyen irányultságú lejtőn található a növény)
+  <br />
+  2. A megfigyelt növény fajtája (jelen útmutatóban szereplő magyar név
+  elegendő)
+  <br />
+  3. A megfigyelt növény új fenológiai fázisa
+  <br />
+  4. A megfigyelt növény új fázisba lépésének időpontja (év, hó, nap)
+  <br />
+  A Fórumban való rögzítés időpontja lehet akár napokkal a megfigyelés időpontja
+  után is, de azért arra vigyázzunk, hogy addig rögzítsük, míg a dátumra
+  pontosan emlékszünk.
+</p>
