--- a/phenology-frontend/src/app/page/history/history.component.html
+++ b/phenology-frontend/src/app/page/history/history.component.html
@@ -1,53 +1,88 @@
-<div>
-  <h1>A növényfenológia jelentősége</h1>
+<div class="mt-5">
+  <div class="container">
+    <h1 class="p-3 bg-success text-light rounded shadow-lg">A növényfenológia jelentősége</h1>
 
-  <p>
-    Az éghajlat a meteorológiai elemek sokaságának statisztikai elemzése révén
-    írható le, viszont a növények életciklusának alakulása, valamint a növényi
-    produkció összegzi a környezeti hatásokat, az időjárási elemek összhatását
-    mutatja. Így a növény kiváló meteorológiai eszköz az éghajlat, az éghajlat
-    változásának jellemzésére.
+    <p class="mt-3">
+      Az éghajlat a meteorológiai elemek sokaságának statisztikai elemzése révén
+      írható le, viszont a növények életciklusának alakulása, valamint a növényi
+      produkció összegzi a környezeti hatásokat, az időjárási elemek összhatását
+      mutatja. Így a növény kiváló meteorológiai eszköz az éghajlat, az éghajlat
+      változásának jellemzésére.
+    </p>
+
     <br />
-    fenológia = megjelenéstan
+
+    <p><b>fenológia = megjelenéstan </b></p>
+
     <br />
-    A (fito)fenológia a növények környezeti viszonyoktól függő, szabályszerű
-    egymásutánban bekövetkező jelenségeinek vizsgálatával foglalkozó tudomány. A
-    fenológiai jelenségek a növény fejlődésének látható jelei, a fenológiai
-    fázisok az egyes élettani szakaszok határpontjai, melyek szabályszerű
-    rendben követik egymást, ezért hű képet adnak a fejlődés üteméről. A
-    fenológia eredeti feladata a fejlődési fázisok naptári időpontok szerinti
-    feljegyzése volt.
+
+    <p>
+      A (fito)fenológia a növények környezeti viszonyoktól függő, szabályszerű
+      egymásutánban bekövetkező jelenségeinek vizsgálatával foglalkozó tudomány.
+      A fenológiai jelenségek a növény fejlődésének látható jelei, a fenológiai
+      fázisok az egyes élettani szakaszok határpontjai, melyek szabályszerű
+      rendben követik egymást, ezért hű képet adnak a fejlődés üteméről. A
+      fenológia eredeti feladata a fejlődési fázisok naptári időpontok szerinti
+      feljegyzése volt.
+    </p>
+
     <br />
-    Az évtizedek során többször változott a növényfenológiai megfigyelések
-    célja. A XX. század közepéig a természettudományos érdeklődés és az
-    ismeretszerzés, a XX. század közepétől a mezőgazdasági termesztés
-    föllendítése, a termés- és a vegyszeres növényvédelem-optimalizálás, a XXI.
-    században pedig egyre inkább az éghajlatváltozás nyomon követése lett a fő
-    cél.
+
+    <p>
+      Az évtizedek során többször változott a növényfenológiai megfigyelések
+      célja. A XX. század közepéig a természettudományos érdeklődés és az
+      ismeretszerzés, a XX. század közepétől a mezőgazdasági termesztés
+      föllendítése, a termés- és a vegyszeres növényvédelem-optimalizálás, a
+      XXI. században pedig egyre inkább az éghajlatváltozás nyomon követése lett
+      a fő cél.
+    </p>
+
     <br />
-    A hőmérséklet emelkedésével az éghajlati övek eltolódnak, a mérsékelt
-    szélességeken a vegetációs időszak hosszabbodik, a kártevők és kórokozók
-    elterjedési területe is megváltozik. A növények komplex módon reagálnak az
-    éghajat változására, így a hosszú fenológiai adatsorok hűen tükrözik a klíma
-    változását.
+
+    <p>
+      A hőmérséklet emelkedésével az éghajlati övek eltolódnak, a mérsékelt
+      szélességeken a vegetációs időszak hosszabbodik, a kártevők és kórokozók
+      elterjedési területe is megváltozik. A növények komplex módon reagálnak az
+      éghajat változására, így a hosszú fenológiai adatsorok hűen tükrözik a
+      klíma változását.
+    </p>
+
     <br />
-    Genfben a XIX. század eleje óta folyamatosan végeznek észleléseket a
-    gesztenye lombosodásának kezdeti időpontjára vonatkozóan. Aono és Kazui
-    2008-ban megjelent tudományos cikkükben a Japánban tradicionálisan kultikus
-    jelentőséggel bíró, s ezért Kiotóban különböző formában több mint egy
-    évezrede dokumentált japáncseresznye virágzás időpontját rekonstruálták az
-    i.sz. 801‒2005. közötti időszakra vonatkozóan. Korábbi kutatási eredményekre
-    támaszkodva és korabeli naplók, krónikák, költemények és újság-cikkek
-    adatait is felhasználva a kérdéses időszak éveinek több mint 60%-ára
-    számszerűen előállították a márciusi-április közepi cseresznyevirágzás
-    időpontját, s az így nyert adatbázis alapján elemezték a területre jellemző
-    éghajlatingadozásokat.
-  </p>
+
+    <p>
+      Genfben a XIX. század eleje óta folyamatosan végeznek észleléseket a
+      gesztenye lombosodásának kezdeti időpontjára vonatkozóan. Aono és Kazui
+      2008-ban megjelent tudományos cikkükben a Japánban tradicionálisan
+      kultikus jelentőséggel bíró, s ezért Kiotóban különböző formában több mint
+      egy évezrede dokumentált japáncseresznye virágzás időpontját
+      rekonstruálták az i.sz. 801‒2005. közötti időszakra vonatkozóan. Korábbi
+      kutatási eredményekre támaszkodva és korabeli naplók, krónikák,
+      költemények és újság-cikkek adatait is felhasználva a kérdéses időszak
+      éveinek több mint 60%-ára számszerűen előállították a márciusi-április
+      közepi cseresznyevirágzás időpontját, s az így nyert adatbázis alapján
+      elemezték a területre jellemző éghajlatingadozásokat.
+    </p>
+
+    <div class="container my-5 border shadow">
+      <img
+        src="../../../assets/image/5-Figure2-1.png"
+        class="illustration img-fluid my-5"
+        alt=""
+      />
+
+      <label for="illustration" class="d-block text-center mb-3 fst-italic"
+        >A japáncseresznye virágzási időpontja Kiotóban 801. és 2005. között az
+        évből eltelt napok számában megadva Yasuyuki Aono és Keiko Kazui nyomán
+        (Int. J. Climatol. 2008.)</label
+      >
+    </div>
+  </div>
 </div>
 
-<div>
-  <h1>A növényfenológia története</h1>
-  <p>
+<div class="container">
+  <h1 class="p-3 bg-success text-light rounded shadow-lg">A növényfenológia története</h1>
+
+  <p class="mt-3">
     A természethez a mainál sokkal közelebb élő és attól sokkal jobban függő
     ember mindig is figyelte az időjárás és a természet folyamatait, a növények
     évenkénti fejlődését, az állatok viselkedését. Számos népi időjárási
@@ -61,16 +96,26 @@
     tartották, hogy amilyen hosszú jégcsapok lógnak az ereszről, olyan hosszú
     kukoricacsövek teremnek majd. Mátyás napján, február 24-én a hideg idő jó
     termést ígért, az eső pedig jégverést és savanyú szőlőt jelentett.
-    <br />
+  </p>
+
+  <br />
+
+  <p>
     Carl Linné (1707-1778) az alapvető botanikai rendszerező munkája mellett
     évenként adatokat gyűjtött a vadmadarak költözésének és visszatérésének
     időpontjáról. Följegyezte, hogy mikor áll be a tavaszi olvadás, melyek az
     elsőként nyíló tavaszi növények és mikor hozzák termésüket. Többéves
     megfigyeléseivel Linné megalapította a fenológia tudományát.
-    <br />
+  </p>
+
+  <br />
+
+  <p>
     Charles Morren (1807-1858), a Liege-i Egyetem botanika professzora használta
     először tudományos cikkben a „fenológia” kifejezést.
-    <br />
+  </p>
+  <br />
+  <p>
     Mivel az időjárás és a növények fejlődése közötti szoros kapcsolat
     nyilvánvaló volt, a XIX. század második felében megalakuló nemzeti
     meteorológiai szolgálatok mérési programjában szerepelt a növények
@@ -85,23 +130,78 @@
     megfigyelésére nincs lehetőség, egy úgynevezett tájképi fenológiai skála
     alkalmazása szükséges, mely alapján a „tavasz kezdete”, „nyár kezdete”, „ősz
     kezdete” és „tél kezdete” állapotok jelennek meg.
-    <br />
+  </p>
+  <div class="container my-5 border shadow">
+    <img
+      src="../../../assets/image/FAPAR_erdo.png"
+      class="illustration img-fluid my-5"
+      alt=""
+    />
+
+    <label for="illustration" class="d-block text-center mb-3 fst-italic"
+      >A FAPAR műholdas vegetációs index éves menete hazánkban 1999. és 2018.
+      között lombhullató erdőkre. A kitavaszodás, vagyis amikor megugrik az
+      index értéke, illetve a lombhullás időszaka, amikor lecsökken az értéke,
+      minden évben kicsit máskor történik az időjárásnak megfelelően. (A FAPAR
+      index számszerűsíti az élő zöld növényzet által elnyelt, a
+      fotoszintézishez szükséges napsugárzás arányát. Értéke 0 és 1 között
+      változik, mértékegység nélküli arányszám. A FAPAR index az ENSZ Globális
+      Éghajlati Megfigyelő Rendszere (GCOS) által elismert 50 alapvető
+      klímaváltozó (ECV) egyike a Föld éghajlatának jellemzéséhez.)
+      <br />
+      <a
+        href="https://www.met.hu/ismeret-tar/erdekessegek_tanulmanyok/index.php?id=2420&hir=A_novenyzet_muholdas_megfigyelese_%E2%80%93_vegetacios_indexek"
+        target="_blank"
+        >Részletes tanulmány>></a
+      >
+    </label>
+  </div>
+
+  <br />
+  <p>
     A kutatások szerint Európában a tavaszi-nyári fenológiai fázisok időpontjai
     10 évenként mintegy 2,5 nappal korábbra kerülnek, míg az őszi elszíneződés,
     levélhullás időpontjaiban nincs számottevő trend.
-
-    <img src="../../../assets/image/5-Figure2-1.png" alt="" />
-    Yasuyuki Aono és Keiko Kazui (Int. J. Climatol. 2008.)
   </p>
+  <div class="container my-5 border shadow">
+    <img
+      src="../../../assets/image/FAPAR_tavasz_erdo.png"
+      class="illustration img-fluid my-5"
+      alt=""
+    />
+
+    <label for="illustration" class="d-block text-center mb-3 fst-italic"
+      >A FAPAR index változása hazánkban a tavaszi hónapokban lombhullató
+      erőkben 1999. és 2018. között. Mindhárom hónapban növekvő tendencia
+      figyelhető meg, ami azt jelenti, hogy a növények egyre hamarabb indulnak
+      fejlődésnek tavasszal, a vegetációs időszak egyre korábban kezdődik.
+      <br />
+      <a
+        href="https://www.met.hu/ismeret-tar/erdekessegek_tanulmanyok/index.php?id=2420&hir=A_novenyzet_muholdas_megfigyelese_%E2%80%93_vegetacios_indexek"
+        target="_blank"
+        >Részletes tanulmány>></a
+      >
+    </label>
+  </div>
 </div>
 
-<div>
-  <h1>Növényfenológia az Országos Meteorológiai Szolgálatnál</h1>
-  <p>
+<div class="container">
+  <h1 class="p-3 bg-success text-light rounded shadow-lg">Növényfenológia az Országos Meteorológiai Szolgálatnál</h1>
+
+  <p class="mt-3">
     Hazánkban már Kitaibel Pál (1757-1817) botanikai és terepmunkája során
     följegyezte a fajok virítási idejét, időtartamát, melyből az élőhelyek
     eltérő éghajlati adottságaira következtetett.
-    <br />
+  </p>
+
+  <br />
+
+  <p>
+    <img
+      src="../../../assets/image/intezet_cimer.gif"
+      class="img-fluid float-start me-5 mb-5"
+      alt=""
+    />
     1870-ben, az Országos Meteorológiai Szolgálat jogelődjének, a Meteorológiai
     és Földdelejességi Magyar Királyi Központi Intézet alapításakor létesült a
     növényfenológiai megfigyelő hálózat. Az akkori évkönyvekben 1871-1885.
@@ -110,17 +210,41 @@
     Török-Becse településeken állt elő. Ezt követően 1910-ben a Magyar Földrajzi
     Társaság, majd 1934-ben az Erdészeti Kutató Intézet létesített megfigyelő
     hálózatot.
-    <br />
-    1951-ben az Országos Meteorológiai Intézet szervezett fenológiai megfigyelő
-    hálózatot. Túlnyomórészt vadon termő növények megfigyelését végezték mintegy
-    200 helyen, míg a mezőgazdasági növényeket 13 helyszínen, mezőgazdasági
-    kutatóintézetekben, fajtakísérleti állomásokon figyelték meg. 1965-ben a
-    megfigyelőhálózatot felújították, bővítették, így ekkor 34 növényfaj
-    szerepelt a listán 80 helyszínen. 1982-ben új alapokra helyezték a
-    fenológiai hálózatot, a megfigyeléseket a MÉM-NAK növényvédő szakemberei
-    végezték 2001-ig.
-
-    <img src="../../../assets/image/evkonyv_1871.png" alt="" />
-    <img src="../../../assets/image/archiv_megfigyeles.jpg" alt="" />
   </p>
+
+  <div class="container my-5 border shadow">
+    <img
+      src="../../../assets/image/evkonyv_1871.png"
+      class="illustration img-fluid my-5"
+      alt=""
+    />
+    <label for="illustration" class="d-block text-center mb-3 fst-italic">
+      Részlet a Meteorológiai és Földdelejességi Magyar Királyi Központi Intézet
+      1871-es évkönyvének fonológiai adataiból.
+    </label>
+  </div>
+
+  <br />
+
+  <p>
+    1951-ben az immár Országos Meteorológiai Intézet néven futó Meteorológiai
+    Szolgálat szervezett fenológiai megfigyelő hálózatot. Túlnyomórészt vadon
+    termő növények megfigyelését végezték mintegy 200 helyen, míg a
+    mezőgazdasági növényeket 13 helyszínen, mezőgazdasági kutatóintézetekben,
+    fajtakísérleti állomásokon figyelték meg. 1965-ben a megfigyelőhálózatot
+    felújították, bővítették, így ekkor 34 növényfaj szerepelt a listán 80
+    helyszínen. 1982-ben új alapokra helyezték a fenológiai hálózatot, a
+    megfigyeléseket a MÉM-NAK növényvédő szakemberei végezték 2001-ig.
+  </p>
+
+  <div class="container my-5 border shadow">
+    <img
+      src="../../../assets/image/archiv_megfigyeles.jpg"
+      class="illustration img-fluid my-5"
+      alt=""
+    />
+    <label for="illustration" class="d-block text-center mb-3 fst-italic">
+      Részlet az Országos Meteorológiai Intézet 1963-es fonológiai adataiból.
+    </label>
+  </div>
 </div>
