--- a/phenology-frontend/src/app/page/home/home.component.html
+++ b/phenology-frontend/src/app/page/home/home.component.html
@@ -1,15 +1,30 @@
 
+<!--
 <button class="btn btn-primary" [routerLink]="'/observation'">
   Provide datas
 </button>
 
-<!-- AIzaSyCg8fF_7JOUEWLbbHKpZ1_vjsiQTTk6e5Q -->
+ AIzaSyCg8fF_7JOUEWLbbHKpZ1_vjsiQTTk6e5Q -->
+
+
 <br />
+
+<div class="container d-flex justify-content-center my-5">
+  <div>
+    <h6 class="header"><b>Megfigyelési portál</b></h6>
+    <h1 class="main_header"><b>Növényfenológia</b></h1>
+  </div>
+</div>
+
 
 <div class="row row-cols-1 row-cols-md-3 g-4">
   <div class="col">
-    <div class="card" class="shadow bg-body rounded">
-      <img src="../../../assets/image/bimbó.jpg" class="card-img-top" alt="..." />
+    <div class="card h-100" class="shadow bg-body rounded ">
+      <img
+        src="../../../assets/image/bimbó.jpg"
+        class="card-img-top"
+        alt="..."
+      />
       <div class="card-body">
         <h5>Mi a jelentősége?</h5>
         <h3 class="card-title">Növényfenológiai megfigyelések</h3>
@@ -17,13 +32,19 @@
           This is a longer card with supporting text below as a natural lead-in
           to additional content. This content is a little bit longer.
         </p>
-        <a [routerLink]="'/history'" class="card-link">Bővebben</a>
+        <div class="card-footer">
+          <a [routerLink]="'/history'" class="card-link">Bővebben</a>
+        </div>
       </div>
     </div>
   </div>
   <div class="col">
-    <div class="card" class="shadow bg-body rounded">
-      <img src="../../../assets/image/virag.jpg" class="card-img-top" alt="..." />
+    <div class="card h-100" class="shadow bg-body rounded">
+      <img
+        src="../../../assets/image/virag.jpg"
+        class="card-img-top"
+        alt="..."
+      />
       <div class="card-body">
         <h5>Én is részt vehetek?</h5>
         <h3 class="card-title">Legyél te is megfigyelő!</h3>
@@ -31,13 +52,19 @@
           This is a longer card with supporting text below as a natural lead-in
           to additional content.
         </p>
-        <a [routerLink]="'/observer'" class="card-link">Bővebben</a>
+        <div class="card-footer">
+          <a [routerLink]="'/observer'" class="card-link">Bővebben</a>
+        </div>
       </div>
     </div>
   </div>
   <div class="col">
-    <div class="card" class="shadow bg-body rounded">
-      <img src="../../../assets/image/termes.jpg" class="card-img-top" alt="..." />
+    <div class="card h-100" class="shadow bg-body rounded">
+      <img
+        src="../../../assets/image/termes.jpg"
+        class="card-img-top"
+        alt="..."
+      />
       <div class="card-body">
         <h5>Mi a legfrissebb?</h5>
         <h3 class="card-title">Legújabb cikkünk</h3>
@@ -45,7 +72,9 @@
           This is a longer card with supporting text below as a natural lead-in
           to additional content. This content is a little bit longer.
         </p>
-        <a [routerLink]="'/article'" class="card-link">Bővebben</a>
+        <div class="card-footer">
+          <a [routerLink]="'/article'" class="card-link">Bővebben</a>
+        </div>
       </div>
     </div>
   </div>
