--- a/phenology-frontend/src/app/page/guide/guide.component.html
+++ b/phenology-frontend/src/app/page/guide/guide.component.html
@@ -83,3 +83,5 @@
   után is, de azért arra vigyázzunk, hogy addig rögzítsük, míg a dátumra
   pontosan emlékszünk.
 </p>
+
+<a [routerLink]="'/details'" class="card-link">Bővebben</a>
