--- a/phenology-frontend/src/app/page/home/home.component.html
+++ b/phenology-frontend/src/app/page/home/home.component.html
@@ -73,7 +73,7 @@
           to additional content. This content is a little bit longer.
         </p>
         <div class="card-footer">
-          <a [routerLink]="'/article'" class="card-link">Bővebben</a>
+          <a [routerLink]="'/details'" class="card-link">Bővebben</a>
         </div>
       </div>
     </div>
