--- a/phenology-frontend/src/app/common/navigation/navigation.component.html
+++ b/phenology-frontend/src/app/common/navigation/navigation.component.html
@@ -1,5 +1,6 @@
 <nav class="sb-topnav navbar navbar-expand">
   <!-- Navbar Brand-->
+  <a class="navbar-brand ps-3 text-white" routerLink="/"><img src="../../../assets/image/logo2.png" alt="" width="50px"></a>
   <a class="navbar-brand ps-3 text-white" routerLink="/"><strong>Növényfenológia</strong></a>
   <a routerLink="/observation" class="nav-link text-white">Megfigyelések</a>
   <a routerLink="/article" class="nav-link text-white">Cikkek</a>
