--- a/phenology-frontend/src/app/page/observation-datas/observation-datas.component.html
+++ b/phenology-frontend/src/app/page/observation-datas/observation-datas.component.html
@@ -20,7 +20,7 @@
       <div class="row row-cols-3 row-cols-md-6 g-3 mt-3 text-dark">
         <div class="col" *ngFor="let plant of plants$ | async">
           <div class="card h-100" (click)="setPlant(plant)">
-            <img [src]="plant.image" class="card-img-top" height="100px" alt="...">
+            <img [src]="plant.image[0]" class="card-img-top" height="100px" alt="...">
             <div class="card-body">
               <h6 class="card-title fw-bold">{{plant.name}}</h6>
               <p class="card-text">{{plant.latin}}</p>
