--- a/phenology-frontend/src/app/page/guide/detailed-plant-guide/detailed-plant-guide.component.html
+++ b/phenology-frontend/src/app/page/guide/detailed-plant-guide/detailed-plant-guide.component.html
@@ -5,7 +5,7 @@
   <div class="row row-cols-3 row-cols-md-6 g-3 mt-3 text-dark">
     <div class="col" *ngFor="let plant of trees">
       <div class="card h-100">
-        <a [routerLink]="'/plant'">
+        <a routerLink="/plant/{{plant._id}}">
           <img [src]="plant.image[0]" class="card-img-top" alt="..." />
           <div class="card-body">
             <h6 class="card-title fw-bold">{{ plant.name }}</h6>
