--- a/phenology-frontend/src/app/page/guide/individual-plant-guide/individual-plant-guide.component.html
+++ b/phenology-frontend/src/app/page/guide/individual-plant-guide/individual-plant-guide.component.html
@@ -1,4 +1,7 @@
+<div *ngIf="(plant$ | async) as plant" class="col-6 offset-3">
 
+<h4>{{plant.name}}</h4>
 
 <p>individual-plant-guide works!</p>
 
+</div>
